[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaivoice"
version = "1.0.0"
requires-python = ">=3.10"
description = "A.I.VOICE Talk EditorをPythonからシンプルに操作するライブラリ"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "DETERMINATION8192" },
]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "pywin32",
]

[project.urls]
"Homepage" = "https://github.com/DETERMINATION8192/pyaivoice"
"Bug Tracker" = "https://github.com/DETERMINATION8192/pyaivoice/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyaivoice*"]

[tool.ruff]
target-version = "py310"
